tests/rosetta/out/Smalltalk/abc-problem.out
/tmp/abc-problem.st:7: parse error, expected ']'
